[gd_scene load_steps=16 format=3 uid="uid://16h08xu6e0cf"]

[ext_resource type="Script" uid="uid://bvgkpnnhasnmu" path="res://addons/rhythm_components/test/test.gd" id="1_aq4mj"]
[ext_resource type="Script" uid="uid://jeowx1efyhmh" path="res://addons/rhythm_components/core/sound_player/rhythm_sound_player.gd" id="2_nq5uw"]
[ext_resource type="Script" uid="uid://cdp4hmtnt723b" path="res://addons/rhythm_components/core/conductor/rhythm_conductor.gd" id="3_8hywi"]
[ext_resource type="Texture2D" uid="uid://vyxb8fsntetj" path="res://addons/rhythm_components/test/assets/largecircle-fill-circle-svgrepo-com (2).png" id="4_jcefj"]
[ext_resource type="Texture2D" uid="uid://b78aitc7533oj" path="res://addons/rhythm_components/test/assets/largecircle-fill-circle-svgrepo-com.png" id="5_5nywi"]
[ext_resource type="Script" uid="uid://deuw28bj2t0hj" path="res://addons/rhythm_components/core/player_input/rhythm_player_input.gd" id="5_64nth"]
[ext_resource type="Script" uid="uid://bwy8j4aaxroly" path="res://addons/rhythm_components/test/timer_test.gd" id="6_8hywi"]
[ext_resource type="Animation" uid="uid://dyet1ujstlbn5" path="res://addons/rhythm_components/test/assets/new_animation.res" id="6_64nth"]
[ext_resource type="Script" uid="uid://suwtfes4vkh7" path="res://addons/rhythm_components/core/animation_player/rythm_animation_player.gd" id="7_iesmm"]
[ext_resource type="Script" uid="uid://bmahkykfewokg" path="res://addons/rhythm_components/core/timer/rhythm_timer.gd" id="7_jcefj"]
[ext_resource type="Script" uid="uid://rybxd8agpkj7" path="res://addons/rhythm_components/test/rhythm_game.gd" id="10_jcefj"]

[sub_resource type="LabelSettings" id="LabelSettings_5nywi"]
font_size = 32

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mc0p1"]
_data = {
&"new_animation": ExtResource("6_64nth")
}

[sub_resource type="Animation" id="Animation_8hywi"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(345, 550.00006), Vector2(345, -58)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nywi"]
_data = {
&"new_animation": SubResource("Animation_8hywi")
}

[node name="Test" type="Node2D"]
script = ExtResource("1_aq4mj")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="RhythmSoundPlayer" type="Node" parent="."]
script = ExtResource("2_nq5uw")
metadata/_custom_type_script = "uid://jeowx1efyhmh"

[node name="RhythmConductor" type="Node" parent="."]
script = ExtResource("3_8hywi")
metadata/_custom_type_script = "uid://cdp4hmtnt723b"

[node name="RhythmInputListener" type="Node" parent="."]
script = ExtResource("5_64nth")
actions = Array[StringName]([&"asaf"])
metadata/_custom_type_script = "uid://deuw28bj2t0hj"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 321.0
offset_right = -321.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_jcefj")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_5nywi")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_5nywi")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_5nywi")
expand_mode = 1
stretch_mode = 5

[node name="TimerTest" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 285.0
offset_bottom = 93.0
script = ExtResource("6_8hywi")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TimerTest"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/TimerTest/HBoxContainer"]
layout_mode = 2
text = "Start timer"

[node name="HSlider" type="HSlider" parent="CanvasLayer/TimerTest/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true

[node name="SliderVal" type="Label" parent="CanvasLayer/TimerTest/HBoxContainer"]
layout_mode = 2
text = "1"

[node name="TimerTimeLeft" type="Label" parent="CanvasLayer/TimerTest"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_5nywi")

[node name="RhythmTimer" type="Node" parent="CanvasLayer/TimerTest" node_paths=PackedStringArray("conductor")]
script = ExtResource("7_jcefj")
conductor = NodePath("../../../RhythmConductor")
wait_beats = 4.0
one_shot = true
metadata/_custom_type_script = "uid://bmahkykfewokg"

[node name="RhythmAnimationPlayer" type="AnimationPlayer" parent="." node_paths=PackedStringArray("conductor")]
libraries = {
&"": SubResource("AnimationLibrary_mc0p1")
}
autoplay = "new_animation"
script = ExtResource("7_iesmm")
conductor = NodePath("../RhythmConductor")
metadata/_custom_type_script = "uid://suwtfes4vkh7"

[node name="RhythmGame" type="CanvasLayer" parent="."]
script = ExtResource("10_jcefj")

[node name="HBoxContainer" type="HBoxContainer" parent="RhythmGame"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -298.0
offset_top = -164.0
offset_right = 298.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RhythmGame/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="RhythmGame/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("5_5nywi")
expand_mode = 4
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="RhythmGame/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="RhythmGame/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("5_5nywi")
expand_mode = 4
stretch_mode = 5

[node name="VBoxContainer3" type="VBoxContainer" parent="RhythmGame/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="RhythmGame/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("5_5nywi")
expand_mode = 4
stretch_mode = 5

[node name="VBoxContainer4" type="VBoxContainer" parent="RhythmGame/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect2" type="TextureRect" parent="RhythmGame/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
texture = ExtResource("5_5nywi")
expand_mode = 4
stretch_mode = 5

[node name="Sprite2D" type="Sprite2D" parent="RhythmGame"]
position = Vector2(345, 550.00006)
scale = Vector2(0.21093753, 0.21093753)
texture = ExtResource("4_jcefj")

[node name="RhythmAnimationPlayer" type="AnimationPlayer" parent="RhythmGame" node_paths=PackedStringArray("conductor")]
libraries = {
&"": SubResource("AnimationLibrary_5nywi")
}
script = ExtResource("7_iesmm")
conductor = NodePath("../../RhythmConductor")
metadata/_custom_type_script = "uid://suwtfes4vkh7"
